--- a/front-social/package.json
+++ b/front-social/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@ngrok/ngrok": "^1.4.1",
-    "@radix-ui/react-separator": "^1.1.3",
+    "@radix-ui/react-dialog": "^1.1.11",
+    "@radix-ui/react-separator": "^1.1.4",
     "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-tooltip": "^1.2.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "jsonwebtoken": "^9.0.2",
