--- a/front-social/package.json
+++ b/front-social/package.json
@@ -11,16 +11,20 @@
   "dependencies": {
     "@ngrok/ngrok": "^1.4.1",
     "@radix-ui/react-dialog": "^1.1.11",
+    "@radix-ui/react-popover": "^1.1.11",
     "@radix-ui/react-separator": "^1.1.4",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tooltip": "^1.2.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.487.0",
     "mongodb": "^6.16.0",
     "next": "15.2.4",
     "react": "^19.0.0",
+    "react-datepicker": "^8.3.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5"
