--- a/front-social/package.json
+++ b/front-social/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.804.0",
     "@ngrok/ngrok": "^1.4.1",
     "@radix-ui/react-dialog": "^1.1.11",
     "@radix-ui/react-label": "^2.1.4",
@@ -16,24 +17,32 @@
     "@radix-ui/react-separator": "^1.1.4",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tooltip": "^1.2.4",
+    "agenda": "^5.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.487.0",
-    "mongodb": "^6.16.0",
+    "mongodb": "^4.17.2",
+    "nanoid": "^5.1.5",
     "next": "15.2.4",
     "react": "^19.0.0",
-    "react-datepicker": "^8.3.0",
-    "react-day-picker": "^8.10.1",
+    "react-date-picker": "^11.0.0",
+    "react-day-picker": "^9.6.7",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.2.0",
-    "tw-animate-css": "^1.2.5"
+    "tw-animate-css": "^1.2.5",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/estree": "^1.0.7",
+    "@types/json-schema": "^7.0.15",
+    "@types/json5": "^0.0.30",
+    "@types/node": "^22.15.15",
+    "@types/whatwg-url": "^13.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
     "tailwindcss": "^4"
