--- a/front-social/package.json
+++ b/front-social/package.json
@@ -20,17 +20,18 @@
     "agenda": "^5.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
+    "date-fns": "^3.2.0",
     "date-fns-tz": "^3.2.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.487.0",
     "mongodb": "^4.17.2",
     "nanoid": "^5.1.5",
     "next": "15.2.4",
-    "react": "^19.0.0",
+    "react": "^18.3.1",
     "react-date-picker": "^11.0.0",
-    "react-day-picker": "^9.6.7",
-    "react-dom": "^19.0.0",
+    "react-datepicker": "^8.3.0",
+    "react-day-picker": "^8.10.1",
+    "react-dom": "^18.3.1",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5",
     "uuid": "^11.1.0"
